Initial create - erroring on database connection.

--- a/JobHunter/appsettings.json
+++ b/JobHunter/appsettings.json
@@ -6,6 +6,9 @@
     "ClientId": "e9088473-fbc3-40df-9ffa-663bd6306e13",
     "CallbackPath": "/signin-oidc"
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=JobHunter;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
