Retooled as Razor pages instead of MVC. Imported vw_JobListings.

--- a/JobHunter/appsettings.Development.json
+++ b/JobHunter/appsettings.Development.json
@@ -1,5 +1,15 @@
 {
   "DetailedErrors": true,
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "DiscantSystemsLLC.onmicrosoft.com",
+    "TenantId": "0c530d83-c914-40ac-beda-93483bb48502",
+    "ClientId": "e9088473-fbc3-40df-9ffa-663bd6306e13",
+    "CallbackPath": "/signin-oidc"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Jobber;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
