--- a/JobHunter/appsettings.json
+++ b/JobHunter/appsettings.json
@@ -7,7 +7,7 @@
     "CallbackPath": "/signin-oidc"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=JobHunter;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Jobber;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
