Wiring up the Edit page, adding actual company/contact objects to the Job model, stubbing Delete and Details pages.

--- a/JobHunter/JobHunter.csproj
+++ b/JobHunter/JobHunter.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\Jobs\Index.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Pages\Jobs\Index.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="efpt.config.json.user" />
   </ItemGroup>
 
